--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,8 @@
     </nav>
         </header>
        <h1>Contact Me</h1>
+
+       <form name="contact" method="POST" data-netlify="true"></form>
 <form>
     <input type="text" name="name" placeholder="Name" required>
     <input type="email" name="email" placeholder="Email Addres" required>
